@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,10 +19,7 @@ package org.jkiss.dbeaver.ui.dialogs.connection;
 import org.eclipse.jface.dialogs.IDialogConstants;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.events.SelectionListener;
-import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.*;
@@ -46,7 +43,9 @@ import org.jkiss.dbeaver.registry.DataSourceDescriptor;
 import org.jkiss.dbeaver.registry.DataSourceNavigatorSettings;
 import org.jkiss.dbeaver.registry.DataSourceProviderRegistry;
 import org.jkiss.dbeaver.runtime.DBWorkbench;
+import org.jkiss.dbeaver.ui.BaseThemeSettings;
 import org.jkiss.dbeaver.ui.IHelpContextIds;
+import org.jkiss.dbeaver.ui.UIIcon;
 import org.jkiss.dbeaver.ui.UIUtils;
 import org.jkiss.dbeaver.ui.contentassist.ContentAssistUtils;
 import org.jkiss.dbeaver.ui.contentassist.SmartTextContentAdapter;
@@ -102,7 +101,6 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
 
     private final List<FilterInfo> filters = new ArrayList<>();
     private Group filtersGroup;
-    private Font boldFont;
 
     ConnectionPageGeneral(ConnectionWizard wizard)
     {
@@ -142,14 +140,8 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
         }
     }
 
-    protected boolean wasActivated() {
-        return this.activated;
-    }
-
     @Override
-    public void dispose()
-    {
-        UIUtils.dispose(boldFont);
+    public void dispose() {
         super.dispose();
     }
 
@@ -241,15 +233,22 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
         filterInfo.link.setEnabled(enable);
         if (enable) {
             filterInfo.link.setText("<a>" + filterInfo.title + "</a>");
-            filterInfo.link.setToolTipText(NLS.bind(CoreMessages.dialog_connection_wizard_final_filter_link_tooltip, filterInfo.title));
+            filterInfo.link.setToolTipText(NLS.bind(
+                CoreMessages.dialog_connection_wizard_final_filter_link_tooltip,
+                filterInfo.title
+            ));
             if (filterInfo.filter != null && !filterInfo.filter.isNotApplicable()) {
-                filterInfo.link.setFont(boldFont);
+                filterInfo.link.setFont(BaseThemeSettings.instance.baseFontBold);
             } else {
                 filterInfo.link.setFont(getFont());
             }
         } else {
             //filterInfo.link.setText(NLS.bind(CoreMessages.dialog_connection_wizard_final_filter_link_not_supported_text, filterInfo.title));
-            filterInfo.link.setToolTipText(NLS.bind(CoreMessages.dialog_connection_wizard_final_filter_link_not_supported_tooltip, filterInfo.title, getWizard().getSelectedDriver().getName()));
+            filterInfo.link.setToolTipText(NLS.bind(
+                CoreMessages.dialog_connection_wizard_final_filter_link_not_supported_tooltip,
+                filterInfo.title,
+                getWizard().getSelectedDriver().getName()
+            ));
         }
     }
 
@@ -291,10 +290,7 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
     }
 
     @Override
-    public void createControl(Composite parent)
-    {
-        boldFont = UIUtils.makeBoldFont(parent.getFont());
-
+    public void createControl(Composite parent) {
         if (navigatorSettings == null) {
             navigatorSettings = new DataSourceNavigatorSettings(getWizard().getSelectedNavigatorSettings());
         }
@@ -303,10 +299,22 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
         Composite group = UIUtils.createComposite(parent, 1);
 
         {
-            Composite miscGroup = UIUtils.createControlGroup(group, CoreMessages.pref_page_ui_general_group_general, 2, GridData.FILL_HORIZONTAL, 0);
+            Composite miscGroup = UIUtils.createControlGroup(
+                group,
+                CoreMessages.pref_page_ui_general_group_general,
+                2,
+                GridData.FILL_HORIZONTAL,
+                0
+            );
 
             String connectionName = dataSourceDescriptor == null ? "" : dataSourceDescriptor.getName(); //$NON-NLS-1$
-            connectionNameText = UIUtils.createLabelText(miscGroup, CoreMessages.dialog_connection_wizard_final_label_connection_name, CommonUtils.toString(connectionName));
+            connectionNameText = UIUtils.createLabelText(
+                miscGroup,
+                CoreMessages.dialog_connection_wizard_final_label_connection_name,
+                CommonUtils.toString(connectionName)
+            );
+            UIUtils.setDefaultTextControlWidthHint(connectionNameText);
+
             connectionNameText.addModifyListener(e -> {
                 if (dataSourceDescriptor == null || !connectionNameText.getText().equals(connectionName)) {
                     connectionNameChanged = true;
@@ -316,26 +324,33 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
             ContentAssistUtils.installContentProposal(
                 connectionNameText,
                 new SmartTextContentAdapter(),
-                new StringContentProposalProvider(Arrays.stream(ConnectionNameResolver.getConnectionVariables()).map(GeneralUtils::variablePattern).toArray(String[]::new))
+                new StringContentProposalProvider(
+                    Arrays.stream(ConnectionNameResolver.getConnectionVariables())
+                        .map(GeneralUtils::variablePattern).toArray(String[]::new))
             );
             UIUtils.setContentProposalToolTip(connectionNameText, "Connection name patterns",
                 ConnectionNameResolver.getConnectionVariables());
             descriptionText = UIUtils.createLabelText(miscGroup, CoreMessages.dialog_connection_wizard_description, null);
+            UIUtils.setDefaultTextControlWidthHint(descriptionText);
             {
                 connectionTypeCombo = createConnectionTypeCombo(miscGroup);
-                connectionTypeCombo.addSelectionListener(new SelectionAdapter() {
-                    @Override
-                    public void widgetSelected(SelectionEvent e) {
-                        DBPConnectionType type = connectionTypeCombo.getItem(connectionTypeCombo.getSelectionIndex());
-                        getWizard().firePropertyChangeEvent(ConnectionWizard.PROP_CONNECTION_TYPE, getActiveDataSource().getConnectionConfiguration().getConnectionType(), type);
-                    }
-                });
+                connectionTypeCombo.addSelectionListener(SelectionListener.widgetSelectedAdapter(selectionEvent -> {
+                    DBPConnectionType type = connectionTypeCombo.getItem(connectionTypeCombo.getSelectionIndex());
+                    getWizard().firePropertyChangeEvent(
+                        ConnectionWizard.PROP_CONNECTION_TYPE,
+                        getActiveDataSource().getConnectionConfiguration().getConnectionType(),
+                        type
+                    );
+                }));
 
                 Composite ctGroup = connectionTypeCombo.getParent();
                 ((GridLayout)ctGroup.getLayout()).numColumns++;
-                UIUtils.createDialogButton(ctGroup, CoreMessages.dialog_connection_wizard_final_label_connection_types_edit, new SelectionAdapter() {
-                    @Override
-                    public void widgetSelected(SelectionEvent e) {
+                UIUtils.createPushButton(
+                    ctGroup,
+                    null,
+                    CoreMessages.dialog_connection_wizard_final_label_connection_types_edit,
+                    UIIcon.CONFIGURATION,
+                    SelectionListener.widgetSelectedAdapter(selectionEvent -> {
                         DBPConnectionType curConType = connectionTypeCombo.getSelectedItem();
                         DataSourceDescriptor dataSource = getActiveDataSource();
                         UIUtils.showPreferencesFor(
@@ -344,12 +359,15 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
                             PrefPageConnectionTypes.PAGE_ID);
                         loadConnectionTypes(connectionTypeCombo);
                         if (!connectionTypeCombo.getItems().contains(curConType)) {
-                            curConType = connectionTypeCombo.getItems().get(0);
+                            curConType = connectionTypeCombo.getItems().getFirst();
                         }
                         setConnectionType(connectionTypeCombo, curConType);
-                        getWizard().firePropertyChangeEvent(ConnectionWizard.PROP_CONNECTION_TYPE, curConType, curConType);
-                    }
-                });
+                        getWizard().firePropertyChangeEvent(
+                            ConnectionWizard.PROP_CONNECTION_TYPE,
+                            curConType,
+                            curConType
+                        );
+                    }));
             }
 
             {
@@ -379,13 +397,7 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
             UIUtils.createDialogButton(
                 securityGroup,
                 CoreMessages.pref_page_label_edit_permissions,
-                new SelectionAdapter() {
-                    @Override
-                    public void widgetSelected(SelectionEvent e) {
-                        editPermissions();
-                    }
-                }
-            );
+                SelectionListener.widgetSelectedAdapter(selectionEvent -> editPermissions()));
         }
 
         {
@@ -395,9 +407,10 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
                 CoreMessages.dialog_connection_wizard_final_group_filters,
                 1, GridData.VERTICAL_ALIGN_BEGINNING | GridData.HORIZONTAL_ALIGN_BEGINNING, 0);
             for (final FilterInfo filterInfo : filters) {
-                filterInfo.link = UIUtils.createLink(filtersGroup, "<a>" + filterInfo.title + "</a>", new SelectionAdapter() {
-                    @Override
-                    public void widgetSelected(SelectionEvent e) {
+                filterInfo.link = UIUtils.createLink(
+                    filtersGroup,
+                    "<a>" + filterInfo.title + "</a>",
+                    SelectionListener.widgetSelectedAdapter(selectionEvent -> {
                         EditObjectFilterDialog dialog = new EditObjectFilterDialog(
                             getShell(),
                             getWizard().getDataSourceRegistry(),
@@ -407,13 +420,12 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
                         if (dialog.open() == IDialogConstants.OK_ID) {
                             filterInfo.filter = dialog.getFilter();
                             if (filterInfo.filter != null && !filterInfo.filter.isNotApplicable()) {
-                                filterInfo.link.setFont(boldFont);
+                                filterInfo.link.setFont(BaseThemeSettings.instance.baseFontBold);
                             } else {
                                 filterInfo.link.setFont(getFont());
                             }
                         }
-                    }
-                });
+                    }));
                 filterInfo.link.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
             }
         }
@@ -441,25 +453,26 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
                 "Reset configuration",
                 null,
                 "Delete all colorings, transformers and virtual table constraints for all tables in this data source",
-                new SelectionAdapter() {
-                    @Override
-                    public void widgetSelected(SelectionEvent e) {
-                        if (UIUtils.confirmAction(
-                            getShell(),
-                            "Reset virtual model settings",
-                            "You are about to reset all virtual model configuration.\n It includes:\n" +
-                                "\t- All virtual constraints and foreign keys\n" +
-                                "\t- All column transformers\n" +
-                                "\t- All table row colorings"
-                            )
-                        ) {
-                            dataSourceDescriptor.getVirtualModel().resetData();
-                            DataSourceDescriptor originalDataSource = getWizard().getOriginalDataSource();
+                SelectionListener.widgetSelectedAdapter(e -> {
+                    if (UIUtils.confirmAction(
+                        getShell(),
+                        "Reset virtual model settings",
+                        """
+                            You are about to reset all virtual model configuration.
+                             It includes:
+                            \t- All virtual constraints and foreign keys
+                            \t- All column transformers
+                            \t- All table row colorings"""
+                    )
+                    ) {
+                        dataSourceDescriptor.getVirtualModel().resetData();
+                        DataSourceDescriptor originalDataSource = getWizard().getOriginalDataSource();
+                        if (originalDataSource != null) {
                             originalDataSource.getVirtualModel().resetData();
                             originalDataSource.persistConfiguration();
                         }
                     }
-                });
+                }));
             resetVM.setEnabled(dataSourceDescriptor != null && dataSourceDescriptor.getVirtualModel().hasValuableData());
 //            UIUtils.createInfoLabel(vmGroup, "Virtual model is a logical database structure on the client side (not in a real database).\n" +
 //                "It also contains information about\nrow coloring and columns transformations", GridData.FILL_HORIZONTAL, 1);
@@ -473,40 +486,34 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
 
             Link initConfigLink = new Link(linkGroup, SWT.NONE);
             initConfigLink.setText("<a>" + CoreMessages.dialog_connection_wizard_connection_init_description + "</a>");
-            initConfigLink.addSelectionListener(new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    if (getWizard().isNew()) {
-                        DataSourceDescriptor dataSource = getActiveDataSource();
-                        EditWizardPageDialog dialog = new EditWizardPageDialog(
-                            getWizard(),
-                            new ConnectionPageInitialization(dataSource),
-                            dataSource);
-                        dialog.open();
-                    } else {
-                        getWizard().openSettingsPage(ConnectionPageInitialization.PAGE_NAME);
-                    }
+            initConfigLink.addSelectionListener(SelectionListener.widgetSelectedAdapter(selectionEvent -> {
+                if (getWizard().isNew()) {
+                    DataSourceDescriptor dataSource = getActiveDataSource();
+                    EditWizardPageDialog dialog = new EditWizardPageDialog(
+                        getWizard(),
+                        new ConnectionPageInitialization(dataSource),
+                        dataSource);
+                    dialog.open();
+                } else {
+                    getWizard().openSettingsPage(ConnectionPageInitialization.PAGE_NAME);
                 }
-            });
+            }));
             initConfigLink.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_BEGINNING));
 
             Link shellConfigLink = new Link(linkGroup, SWT.NONE);
             shellConfigLink.setText("<a>" + CoreMessages.dialog_connection_edit_wizard_shell_cmd + "</a>");
-            shellConfigLink.addSelectionListener(new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    if (getWizard().isNew()) {
-                        DataSourceDescriptor dataSource = getActiveDataSource();
-                        EditWizardPageDialog dialog = new EditWizardPageDialog(
-                            getWizard(),
-                            new ConnectionPageShellCommands(dataSource),
-                            dataSource);
-                        dialog.open();
-                    } else {
-                        getWizard().openSettingsPage(ConnectionPageShellCommands.PAGE_NAME);
-                    }
+            shellConfigLink.addSelectionListener(SelectionListener.widgetSelectedAdapter(selectionEvent -> {
+                if (getWizard().isNew()) {
+                    DataSourceDescriptor dataSource = getActiveDataSource();
+                    EditWizardPageDialog dialog = new EditWizardPageDialog(
+                        getWizard(),
+                        new ConnectionPageShellCommands(dataSource),
+                        dataSource);
+                    dialog.open();
+                } else {
+                    getWizard().openSettingsPage(ConnectionPageShellCommands.PAGE_NAME);
                 }
-            });
+            }));
             shellConfigLink.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_BEGINNING));
         }
 
@@ -515,7 +522,11 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
         UIUtils.setHelp(group, IHelpContextIds.CTX_CON_WIZARD_FINAL);
     }
 
-    public static Combo createNavigatorSettingsCombo(Composite composite, NavigatorSettingsStorage settingsStorage, DBPDataSourceContainer dataSourceDescriptor) {
+    public static Combo createNavigatorSettingsCombo(
+        Composite composite,
+        NavigatorSettingsStorage settingsStorage,
+        DBPDataSourceContainer dataSourceDescriptor
+    ) {
         UIUtils.createControlLabel(composite, CoreMessages.dialog_connection_wizard_final_label_navigator_settings);
 
         Composite ctGroup = UIUtils.createComposite(composite, 2);
@@ -527,28 +538,30 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
             navigatorSettingsCombo.add(ncPresetName);
         }
         navigatorSettingsCombo.select(0);
-        navigatorSettingsCombo.addSelectionListener(new SelectionAdapter() {
-            @Override
-            public void widgetSelected(SelectionEvent e) {
-                if (navigatorSettingsCombo.getSelectionIndex() == navigatorSettingsCombo.getItemCount() - 1) {
-                    // Custom - no changes
-                } else {
-                    DataSourceNavigatorSettings.Preset newSettings = DataSourceNavigatorSettings.PRESETS.get(navigatorSettingsCombo.getText());
-                    if (newSettings == null) {
-                        throw new IllegalStateException("Invalid preset name: " + navigatorSettingsCombo.getText());
-                    }
-                    settingsStorage.setNavigatorSettings(newSettings.getSettings());
+        navigatorSettingsCombo.addSelectionListener(SelectionListener.widgetSelectedAdapter(selectionEvent -> {
+            if (navigatorSettingsCombo.getSelectionIndex() == navigatorSettingsCombo.getItemCount() - 1) {
+                // Custom - no changes
+            } else {
+                DataSourceNavigatorSettings.Preset newSettings = DataSourceNavigatorSettings.PRESETS.get(navigatorSettingsCombo.getText());
+                if (newSettings == null) {
+                    throw new IllegalStateException("Invalid preset name: " + navigatorSettingsCombo.getText());
                 }
+                settingsStorage.setNavigatorSettings(newSettings.getSettings());
             }
-        });
+        }));
 
-        UIUtils.createDialogButton(ctGroup, CoreMessages.dialog_connection_wizard_final_label_navigator_settings_customize, new SelectionAdapter() {
-            @Override
-            public void widgetSelected(SelectionEvent e) {
+        UIUtils.createPushButton(
+            ctGroup,
+            null,
+            CoreMessages.dialog_connection_wizard_final_label_navigator_settings_customize,
+            UIIcon.CONFIGURATION,
+            SelectionListener.widgetSelectedAdapter(e ->
                 settingsStorage.setNavigatorSettings(
-                    editNavigatorSettings(navigatorSettingsCombo, settingsStorage.getNavigatorSettings(), dataSourceDescriptor));
-            }
-        });
+                    editNavigatorSettings(
+                        navigatorSettingsCombo,
+                        settingsStorage.getNavigatorSettings(),
+                        dataSourceDescriptor
+                    ))));
         return navigatorSettingsCombo;
     }
 
@@ -557,7 +570,11 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
 
         Composite ctGroup = UIUtils.createComposite(composite, 1);
 
-        CSmartCombo<DBPConnectionType> connectionTypeCombo = new CSmartCombo<>(ctGroup, SWT.BORDER | SWT.DROP_DOWN | SWT.READ_ONLY, new ConnectionTypeLabelProvider());
+        CSmartCombo<DBPConnectionType> connectionTypeCombo = new CSmartCombo<>(
+            ctGroup,
+            SWT.BORDER | SWT.DROP_DOWN | SWT.READ_ONLY,
+            new ConnectionTypeLabelProvider()
+        );
         loadConnectionTypes(connectionTypeCombo);
         setConnectionType(connectionTypeCombo, DBPConnectionType.getDefaultConnectionType());
         connectionTypeCombo.select(DBPConnectionType.getDefaultConnectionType());
